Remove e5 tenant app registration from app settings

--- a/Graph.Console/appsettings.json
+++ b/Graph.Console/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Graph": {
     "TenantId": null,
-    "ClientId": "414383cc-5fc8-4a26-9f68-beff6af5c0e2"
+    "ClientId": ""
   },
   "General": {
     "OutputFormat": 6
